--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(k4afastcapture_streaming)
 add_subdirectory(k4afastcapture_trigger)
 add_subdirectory(k4arecorder)
 add_subdirectory(updater)
+add_subdirectory(k4arawtodepth)
